[gd_scene load_steps=6 format=3 uid="uid://2quh54oyuo1x"]

[ext_resource type="Script" path="res://scenes/home/tilled_dirt.gd" id="1_j52ne"]
[ext_resource type="Texture2D" uid="uid://bx08e3jta0i8o" path="res://assets/sprites/unsorted/tilled_dirt.png" id="2_300y0"]
[ext_resource type="PackedScene" uid="uid://c5d4i5k1dmasm" path="res://scenes/components/exclusion_zone.tscn" id="3_jshs0"]
[ext_resource type="Script" path="res://scripts/helper/exclusion_zone.gd" id="4_ieucb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ou2rj"]
size = Vector2(201.585, 118.765)

[node name="TilledDirt" type="Area2D"]
z_index = -1
collision_layer = 64
collision_mask = 32
script = ExtResource("1_j52ne")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_300y0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.999985, -0.500004)
rotation = -3.14159
scale = Vector2(1.55967, 2.24814)
shape = SubResource("RectangleShape2D_ou2rj")

[node name="ExclusionZone" parent="." instance=ExtResource("3_jshs0")]
script = ExtResource("4_ieucb")

[node name="PlantingTimer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="PlantingTimer" to="." method="_on_planting_timer_timeout"]
